Seguridad: Remover Google Maps API Key expuesta en footer.php

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ verificar-*.ps1
 public_html/pqr/upload/includes/email-config.php
 email-config.php
 API_KEY_LOCAL.md
+GOOGLE_MAPS_API_KEY.md
 
 # Base de datos local (descomentar si es muy grande)
 # pqr_database.sql
